--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-html(lang="en")
-head
-	meta(charset="UTF-8")
-	title Генератор водяных знаков
-body
-	
+extends template/layout
+
+block title
+	| Генератор водяных знаков
+
+block content
