--- a/src/jade/blocks/_main.jade
+++ b/src/jade/blocks/_main.jade
@@ -1,3 +1,18 @@
+
+//-------- Language block ------------
+
+.language
+  - var lang = [['#', 'rus', 'РУС'], ['#', 'eng', 'ENG']]
+  ul.language__list
+    each item in lang
+      li.language__item
+        if item[1] === 'rus'
+          a(href='#{item[0]}' class='language__link language__link--#{item[1]} language__link--active')= item[2]
+        else
+          a(href='#{item[0]}' class='language__link language__link--#{item[1]}')= item[2]
+
+//------------
+
 .main-block
   .main-block__left.workspace
     h1.workspace__title Генератор водяных знаков
