--- a/src/style/layout/_main.scss
+++ b/src/style/layout/_main.scss
@@ -20,6 +20,35 @@
   }
 }
 
+//---------- Social block ------------
+
+.social{
+  &__list{
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    font-size: 0;
+    position: relative;
+    left: -40px;
+    transition: left 1s;
+    width: 80px;
+    &:hover{
+      left: 0;
+    }
+  }
+  &__item{
+    &--like{
+      position: absolute;
+      left: 40px;
+    }
+  }
+  &__link{
+    display: block;
+    width: 40px;
+    height: 40px;
+    background: #d7d5d7;
+  }
+}
 
 
 //---------- Main block ------------
