--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -2,7 +2,7 @@
 //		Basic typography style for copy text
 // -----------------------------------------------------------------------------
 
-body {
-	color: $text-color;
-	font: normal 125% / 1.4 $font-family-base;
-}
+// body {
+// 	color: $text-color;
+// 	font: normal 125% / 1.4 $font-family-base;
+// }
