--- a/src/jade/template/layout.jade
+++ b/src/jade/template/layout.jade
@@ -4,7 +4,7 @@ html(lang="ru-RU")
 
   body
     .wrapper
-      include ../blocks/_main
+      include ../blocks/_main-section
       block content
     footer.footer
       include ../blocks/_footer
