--- a/src/style/layout/_main-section.scss
+++ b/src/style/layout/_main-section.scss
@@ -1,114 +1,21 @@
-//----------Language block -----------
-
-.language{
-  &__list{
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-  }
-  &__link{
-    display: block;
-    width: 45px;
-    text-decoration: none;
-    color: #8e9298;
-    background: #d7d5d7;
-    padding: 0 5px;
-    font-size: 20px;
-    line-height: 35px;
-    box-sizing: border-box;
-    border-bottom: 1px solid #fff;
-    font-family: $font-family-light;
-    &:hover{
-      color: #d7d5d7;
-      background: #8e9298;
-    }
-  }
-}
-
-//---------- Social block ------------
-
-.social{
-  &__list{
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    font-size: 0;
-    position: relative;
-    left: -40px;
-    transition: left 1s;
-    width: 80px;
-    display: inline-block;
-    vertical-align: middle;
-    &:hover{
-      left: 0;
-    }
-  }
-  &__item{
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    background: #d7d5d7;
-    text-align: center;
-    &--like{
-      position: absolute;
-      left: 40px;
-    }
-  }
-  &__link{
-    display: inline-block;
-    vertical-align: middle;
-    &--like{
-      @include sprite($like);
-      &:hover{
-        @include sprite($like-h);
-      }
-    }
-    &--fb{
-      @include sprite($fb);
-      &:hover{
-        @include sprite($fb-h);
-      }
-    }
-    &--tw{
-      @include sprite($tw);
-      &:hover{
-        @include sprite($tw-h);
-      }
-    }
-    &--vk{
-      @include sprite($vk);
-      &:hover{
-        @include sprite($vk-h);
-      }
-    }
-  }
-}
-
-
 //---------- Main block ------------
 
-.main-block{
-  @include clearfix();
-  width: 960px;
-  &__left{
-    width: 700px;
-    box-sizing: border-box;
-    float: left;
-  }
-  &__right{
-    width: 260px;
-    float: right;
-  }
+.main-section {
+  @extend .container;
 }
+
 .workspace{
   padding: 15px 25px 25px 25px;
   background: #6b6260;
+  width: 700px;
+  float: left;
   &__title{
     font-size: 36px;
     margin: 0;
     color: #fff;
     margin-bottom: 60px;
-    font-family: 'robotothin', sans-serif;
+    font-family: $font-family-light;
+    font-weight: 300;
   }
   &__unit{
     height: 535px;
@@ -116,8 +23,13 @@
   }
 }
 .sidebar{
-  background: #ccc;
+  width: 260px;
+  float: right;
+  background: #f1f1f5;
   &__title{
+    font-family: $font-family-light;
+    font-weight: 300;
+    color: #2e3641;
     font-size: 26px;
     text-align: center;
   }
