--- a/src/jade/blocks/_footer.jade
+++ b/src/jade/blocks/_footer.jade
@@ -1,3 +1,3 @@
-.footer__container
-	small.footer__container-copyright
-		| eeeeee
+.footer-container
+	small.footer__copyright
+		| © 2014, Это мой сайт, пожалуйста, не копируйте и не воруйте его
