--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,5 +1,13 @@
 .footer {
-	&__container {
+	height: 70px;
+	&-container {
+		height: 100%;
 		@extend .container;
+	}
+	&__copyright {
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	height: 100%;
 	}
 }
