--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -1,4 +1,3 @@
-
 * {
 	box-sizing: border-box;
 }
@@ -13,8 +12,10 @@ body, html {
 }
 
 body {
+
+	background: url('/img/bg.jpg') no-repeat; 
+	background-size: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
-
