--- a/src/style/layout/_main-section.scss
+++ b/src/style/layout/_main-section.scss
@@ -1,37 +1,27 @@
 //---------- Main block ------------
 
 .main-section {
-  @extend .container;
+	@extend .container;
+	margin-top: 60px;
 }
 
 .workspace{
-  padding: 15px 25px 25px 25px;
-  background: #6b6260;
-  width: 700px;
-  float: left;
-  &__title{
-    font-size: 36px;
-    margin: 0;
-    color: #fff;
-    margin-bottom: 60px;
-    font-family: $font-family-light;
-    font-weight: 300;
-  }
-  &__unit{
-    height: 535px;
-    background: #fff;
-  }
+	padding: 15px 25px 25px 25px;
+	background-color: rgba(46, 54, 65, .54);
+	width: 700px;
+	float: left;
+	&__title{
+		font-size: 36px;
+		margin: 0;
+		color: #fff;
+		margin-bottom: 60px;
+		font-family: $font-family-light;
+		font-weight: 300;
+	}
+	&__unit{
+		height: 535px;
+		background: #fff;
+	}
 }
-.sidebar{
-  width: 260px;
-  float: right;
-  background: #f1f1f5;
-  &__title{
-    font-family: $font-family-light;
-    font-weight: 300;
-    color: #2e3641;
-    font-size: 26px;
-    text-align: center;
-  }
-}
+
 
