--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -14,8 +14,13 @@ body, html {
 body {
 
 	background: url('/img/bg.jpg') no-repeat; 
-	background-size: 100%;
+	background-size: cover;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+}
+
+
+.wrapper {
+	padding-left: 85px;
 }
