--- a/src/style/config/_variables.scss
+++ b/src/style/config/_variables.scss
@@ -44,5 +44,5 @@ $primary-color-light: lighten($primary-color, 20%) !default;
 $primary-color-dark: darken($primary-color, 20%) !default;
 
 $secondary-color: #9eb2c0 !default;
-$secondary-color-light: lighten($secondary-color, 20%) !default;
+$secondary-color-light: #c1cfd9 !default;
 $secondary-color-dark: darken($secondary-color, 20%) !default;
