--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -12,8 +12,9 @@
 .button {
 	width: 99px;
 	height: 42px;
-	border-radius: 2px;
+	border-radius: 3px;
 	border: 0 none;
+	font-family: $font-family-bold;
 	color: $white-text-color;
 }
 
