--- a/src/jade/template/layout.jade
+++ b/src/jade/template/layout.jade
@@ -10,5 +10,6 @@ html(lang="ru-RU")
       include ../blocks/_footer
 
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
+    script(src="js/_plugins/jquery-ui.min.js")
     script(src="js/vendors.js")
     script(src="js/main.js")
