--- a/src/jade/blocks/_sidebar_position.jade
+++ b/src/jade/blocks/_sidebar_position.jade
@@ -16,8 +16,15 @@
 					td.sidebar__position_td
 					td.sidebar__position_td
 		.sidebar__position_coordinates
-			.sidebar__position_coordinate-x
-				.sidebar__position_coordinate-block.coordinateX
-			.sidebar__position_coordinate-y
-				.sidebar__position_coordinate-block.coordinateY
-img(src="/img/line.png").sidebar__line
+			.wrapper__position
+				label.sidebar__position_coordinate-labelX
+					input.position_input.coordinateX
+				.position__arrow
+					.position__arrow_up
+					.position__arrow_down
+			.wrapper__position
+				label.sidebar__position_coordinate-labelY
+					input.position_input.coordinateY
+				.position__arrow
+					.position__arrow_up
+					.position__arrow_down
