--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -13,7 +13,7 @@ body, html {
 
 body {
 
-	background: url('/img/bg.jpg') no-repeat; 
+	background: url('/img/bg.jpg') center center fixed no-repeat; 
 	background-size: cover;
 	display: flex;
 	flex-direction: column;
