--- a/src/style/config/_sprite.scss
+++ b/src/style/config/_sprite.scss
@@ -12,259 +12,164 @@ At the bottom of this section, we provide information about the spritesheet itse
 $spritesheet: width height image $spritesheet-sprites;
 */
 $arrow-down-hover-name: 'arrow-down-hover';
-$arrow-down-hover-x: 241px;
+$arrow-down-hover-x: 289px;
 $arrow-down-hover-y: 0px;
-$arrow-down-hover-offset-x: -241px;
+$arrow-down-hover-offset-x: -289px;
 $arrow-down-hover-offset-y: 0px;
 $arrow-down-hover-width: 13px;
 $arrow-down-hover-height: 8px;
-$arrow-down-hover-total-width: 254px;
-$arrow-down-hover-total-height: 230px;
+$arrow-down-hover-total-width: 302px;
+$arrow-down-hover-total-height: 278px;
 $arrow-down-hover-image: '../img/sprites/sprite.png';
-$arrow-down-hover: (241px, 0px, -241px, 0px, 13px, 8px, 254px, 230px, '../img/sprites/sprite.png', 'arrow-down-hover', );
+$arrow-down-hover: (289px, 0px, -289px, 0px, 13px, 8px, 302px, 278px, '../img/sprites/sprite.png', 'arrow-down-hover', );
 $arrow-down-name: 'arrow-down';
-$arrow-down-x: 202px;
+$arrow-down-x: 250px;
 $arrow-down-y: 24px;
-$arrow-down-offset-x: -202px;
+$arrow-down-offset-x: -250px;
 $arrow-down-offset-y: -24px;
 $arrow-down-width: 13px;
 $arrow-down-height: 8px;
-$arrow-down-total-width: 254px;
-$arrow-down-total-height: 230px;
+$arrow-down-total-width: 302px;
+$arrow-down-total-height: 278px;
 $arrow-down-image: '../img/sprites/sprite.png';
-$arrow-down: (202px, 24px, -202px, -24px, 13px, 8px, 254px, 230px, '../img/sprites/sprite.png', 'arrow-down', );
+$arrow-down: (250px, 24px, -250px, -24px, 13px, 8px, 302px, 278px, '../img/sprites/sprite.png', 'arrow-down', );
 $arrow-up-hover-name: 'arrow-up-hover';
-$arrow-up-hover-x: 228px;
+$arrow-up-hover-x: 276px;
 $arrow-up-hover-y: 8px;
-$arrow-up-hover-offset-x: -228px;
+$arrow-up-hover-offset-x: -276px;
 $arrow-up-hover-offset-y: -8px;
 $arrow-up-hover-width: 13px;
 $arrow-up-hover-height: 8px;
-$arrow-up-hover-total-width: 254px;
-$arrow-up-hover-total-height: 230px;
+$arrow-up-hover-total-width: 302px;
+$arrow-up-hover-total-height: 278px;
 $arrow-up-hover-image: '../img/sprites/sprite.png';
-$arrow-up-hover: (228px, 8px, -228px, -8px, 13px, 8px, 254px, 230px, '../img/sprites/sprite.png', 'arrow-up-hover', );
+$arrow-up-hover: (276px, 8px, -276px, -8px, 13px, 8px, 302px, 278px, '../img/sprites/sprite.png', 'arrow-up-hover', );
 $arrow-up-name: 'arrow-up';
-$arrow-up-x: 215px;
+$arrow-up-x: 263px;
 $arrow-up-y: 16px;
-$arrow-up-offset-x: -215px;
+$arrow-up-offset-x: -263px;
 $arrow-up-offset-y: -16px;
 $arrow-up-width: 13px;
 $arrow-up-height: 8px;
-$arrow-up-total-width: 254px;
-$arrow-up-total-height: 230px;
+$arrow-up-total-width: 302px;
+$arrow-up-total-height: 278px;
 $arrow-up-image: '../img/sprites/sprite.png';
-$arrow-up: (215px, 16px, -215px, -16px, 13px, 8px, 254px, 230px, '../img/sprites/sprite.png', 'arrow-up', );
+$arrow-up: (263px, 16px, -263px, -16px, 13px, 8px, 302px, 278px, '../img/sprites/sprite.png', 'arrow-up', );
 $fb-h-name: 'fb-h';
-<<<<<<< HEAD
 $fb-h-x: 235px;
-$fb-h-y: 0px;
-$fb-h-offset-x: -235px;
-$fb-h-offset-y: 0px;
-$fb-h-width: 15px;
-$fb-h-height: 27px;
-$fb-h-total-width: 250px;
-$fb-h-total-height: 246px;
-$fb-h-image: '../img/sprites/sprite.png';
-$fb-h: (235px, 0px, -235px, 0px, 15px, 27px, 250px, 246px, '../img/sprites/sprite.png', 'fb-h', );
-$fb-name: 'fb';
-$fb-x: 220px;
-$fb-y: 27px;
-$fb-offset-x: -220px;
-$fb-offset-y: -27px;
-$fb-width: 15px;
-$fb-height: 27px;
-$fb-total-width: 250px;
-$fb-total-height: 246px;
-$fb-image: '../img/sprites/sprite.png';
-$fb: (220px, 27px, -220px, -27px, 15px, 27px, 250px, 246px, '../img/sprites/sprite.png', 'fb', );
-$like-h-name: 'like-h';
-$like-h-x: 26px;
-$like-h-y: 182px;
-$like-h-offset-x: -26px;
-$like-h-offset-y: -182px;
-$like-h-width: 26px;
-$like-h-height: 32px;
-$like-h-total-width: 250px;
-$like-h-total-height: 246px;
-$like-h-image: '../img/sprites/sprite.png';
-$like-h: (26px, 182px, -26px, -182px, 26px, 32px, 250px, 246px, '../img/sprites/sprite.png', 'like-h', );
-$like-name: 'like';
-$like-x: 0px;
-$like-y: 214px;
-$like-offset-x: 0px;
-$like-offset-y: -214px;
-$like-width: 26px;
-$like-height: 32px;
-$like-total-width: 250px;
-$like-total-height: 246px;
-$like-image: '../img/sprites/sprite.png';
-$like: (0px, 214px, 0px, -214px, 26px, 32px, 250px, 246px, '../img/sprites/sprite.png', 'like', );
-$regul-h-name: 'regul-h';
-$regul-h-x: 196px;
-$regul-h-y: 54px;
-$regul-h-offset-x: -196px;
-$regul-h-offset-y: -54px;
-$regul-h-width: 24px;
-$regul-h-height: 24px;
-$regul-h-total-width: 250px;
-$regul-h-total-height: 246px;
-$regul-h-image: '../img/sprites/sprite.png';
-$regul-h: (196px, 54px, -196px, -54px, 24px, 24px, 250px, 246px, '../img/sprites/sprite.png', 'regul-h', );
-$regul-name: 'regul';
-$regul-x: 172px;
-$regul-y: 78px;
-$regul-offset-x: -172px;
-$regul-offset-y: -78px;
-$regul-width: 24px;
-$regul-height: 24px;
-$regul-total-width: 250px;
-$regul-total-height: 246px;
-$regul-image: '../img/sprites/sprite.png';
-$regul: (172px, 78px, -172px, -78px, 24px, 24px, 250px, 246px, '../img/sprites/sprite.png', 'regul', );
-$tw-h-name: 'tw-h';
-$tw-h-x: 144px;
-$tw-h-y: 102px;
-$tw-h-offset-x: -144px;
-$tw-h-offset-y: -102px;
-$tw-h-width: 28px;
-$tw-h-height: 22px;
-$tw-h-total-width: 250px;
-$tw-h-total-height: 246px;
-$tw-h-image: '../img/sprites/sprite.png';
-$tw-h: (144px, 102px, -144px, -102px, 28px, 22px, 250px, 246px, '../img/sprites/sprite.png', 'tw-h', );
-$tw-name: 'tw';
-$tw-x: 116px;
-$tw-y: 124px;
-$tw-offset-x: -116px;
-$tw-offset-y: -124px;
-$tw-width: 28px;
-$tw-height: 22px;
-$tw-total-width: 250px;
-$tw-total-height: 246px;
-$tw-image: '../img/sprites/sprite.png';
-$tw: (116px, 124px, -116px, -124px, 28px, 22px, 250px, 246px, '../img/sprites/sprite.png', 'tw', );
-$vk-h-name: 'vk-h';
-$vk-h-x: 84px;
-$vk-h-y: 146px;
-$vk-h-offset-x: -84px;
-$vk-h-offset-y: -146px;
-$vk-h-width: 32px;
-$vk-h-height: 18px;
-$vk-h-total-width: 250px;
-$vk-h-total-height: 246px;
-$vk-h-image: '../img/sprites/sprite.png';
-$vk-h: (84px, 146px, -84px, -146px, 32px, 18px, 250px, 246px, '../img/sprites/sprite.png', 'vk-h', );
-$vk-name: 'vk';
-$vk-x: 52px;
-$vk-y: 164px;
-$vk-offset-x: -52px;
-$vk-offset-y: -164px;
-$vk-width: 32px;
-$vk-height: 18px;
-$vk-total-width: 250px;
-$vk-total-height: 246px;
-$vk-image: '../img/sprites/sprite.png';
-$vk: (52px, 164px, -52px, -164px, 32px, 18px, 250px, 246px, '../img/sprites/sprite.png', 'vk', );
-$spritesheet-width: 250px;
-$spritesheet-height: 246px;
-$spritesheet-image: '../img/sprites/sprite.png';
-$spritesheet-sprites: ($fb-h, $fb, $like-h, $like, $regul-h, $regul, $tw-h, $tw, $vk-h, $vk, );
-$spritesheet: (250px, 246px, '../img/sprites/sprite.png', $spritesheet-sprites, );
-=======
-$fb-h-x: 187px;
 $fb-h-y: 32px;
-$fb-h-offset-x: -187px;
+$fb-h-offset-x: -235px;
 $fb-h-offset-y: -32px;
 $fb-h-width: 15px;
 $fb-h-height: 27px;
-$fb-h-total-width: 254px;
-$fb-h-total-height: 230px;
+$fb-h-total-width: 302px;
+$fb-h-total-height: 278px;
 $fb-h-image: '../img/sprites/sprite.png';
-$fb-h: (187px, 32px, -187px, -32px, 15px, 27px, 254px, 230px, '../img/sprites/sprite.png', 'fb-h', );
+$fb-h: (235px, 32px, -235px, -32px, 15px, 27px, 302px, 278px, '../img/sprites/sprite.png', 'fb-h', );
 $fb-name: 'fb';
-$fb-x: 172px;
+$fb-x: 220px;
 $fb-y: 59px;
-$fb-offset-x: -172px;
+$fb-offset-x: -220px;
 $fb-offset-y: -59px;
 $fb-width: 15px;
 $fb-height: 27px;
-$fb-total-width: 254px;
-$fb-total-height: 230px;
+$fb-total-width: 302px;
+$fb-total-height: 278px;
 $fb-image: '../img/sprites/sprite.png';
-$fb: (172px, 59px, -172px, -59px, 15px, 27px, 254px, 230px, '../img/sprites/sprite.png', 'fb', );
+$fb: (220px, 59px, -220px, -59px, 15px, 27px, 302px, 278px, '../img/sprites/sprite.png', 'fb', );
 $like-h-name: 'like-h';
-$like-h-x: 0px;
-$like-h-y: 198px;
-$like-h-offset-x: 0px;
-$like-h-offset-y: -198px;
+$like-h-x: 26px;
+$like-h-y: 214px;
+$like-h-offset-x: -26px;
+$like-h-offset-y: -214px;
 $like-h-width: 26px;
 $like-h-height: 32px;
-$like-h-total-width: 254px;
-$like-h-total-height: 230px;
+$like-h-total-width: 302px;
+$like-h-total-height: 278px;
 $like-h-image: '../img/sprites/sprite.png';
-$like-h: (0px, 198px, 0px, -198px, 26px, 32px, 254px, 230px, '../img/sprites/sprite.png', 'like-h', );
+$like-h: (26px, 214px, -26px, -214px, 26px, 32px, 302px, 278px, '../img/sprites/sprite.png', 'like-h', );
 $like-name: 'like';
-$like-x: 26px;
-$like-y: 166px;
-$like-offset-x: -26px;
-$like-offset-y: -166px;
+$like-x: 0px;
+$like-y: 246px;
+$like-offset-x: 0px;
+$like-offset-y: -246px;
 $like-width: 26px;
 $like-height: 32px;
-$like-total-width: 254px;
-$like-total-height: 230px;
+$like-total-width: 302px;
+$like-total-height: 278px;
 $like-image: '../img/sprites/sprite.png';
-$like: (26px, 166px, -26px, -166px, 26px, 32px, 254px, 230px, '../img/sprites/sprite.png', 'like', );
+$like: (0px, 246px, 0px, -246px, 26px, 32px, 302px, 278px, '../img/sprites/sprite.png', 'like', );
+$regul-h-name: 'regul-h';
+$regul-h-x: 196px;
+$regul-h-y: 86px;
+$regul-h-offset-x: -196px;
+$regul-h-offset-y: -86px;
+$regul-h-width: 24px;
+$regul-h-height: 24px;
+$regul-h-total-width: 302px;
+$regul-h-total-height: 278px;
+$regul-h-image: '../img/sprites/sprite.png';
+$regul-h: (196px, 86px, -196px, -86px, 24px, 24px, 302px, 278px, '../img/sprites/sprite.png', 'regul-h', );
+$regul-name: 'regul';
+$regul-x: 172px;
+$regul-y: 110px;
+$regul-offset-x: -172px;
+$regul-offset-y: -110px;
+$regul-width: 24px;
+$regul-height: 24px;
+$regul-total-width: 302px;
+$regul-total-height: 278px;
+$regul-image: '../img/sprites/sprite.png';
+$regul: (172px, 110px, -172px, -110px, 24px, 24px, 302px, 278px, '../img/sprites/sprite.png', 'regul', );
 $tw-h-name: 'tw-h';
 $tw-h-x: 144px;
-$tw-h-y: 86px;
+$tw-h-y: 134px;
 $tw-h-offset-x: -144px;
-$tw-h-offset-y: -86px;
+$tw-h-offset-y: -134px;
 $tw-h-width: 28px;
 $tw-h-height: 22px;
-$tw-h-total-width: 254px;
-$tw-h-total-height: 230px;
+$tw-h-total-width: 302px;
+$tw-h-total-height: 278px;
 $tw-h-image: '../img/sprites/sprite.png';
-$tw-h: (144px, 86px, -144px, -86px, 28px, 22px, 254px, 230px, '../img/sprites/sprite.png', 'tw-h', );
+$tw-h: (144px, 134px, -144px, -134px, 28px, 22px, 302px, 278px, '../img/sprites/sprite.png', 'tw-h', );
 $tw-name: 'tw';
 $tw-x: 116px;
-$tw-y: 108px;
+$tw-y: 156px;
 $tw-offset-x: -116px;
-$tw-offset-y: -108px;
+$tw-offset-y: -156px;
 $tw-width: 28px;
 $tw-height: 22px;
-$tw-total-width: 254px;
-$tw-total-height: 230px;
+$tw-total-width: 302px;
+$tw-total-height: 278px;
 $tw-image: '../img/sprites/sprite.png';
-$tw: (116px, 108px, -116px, -108px, 28px, 22px, 254px, 230px, '../img/sprites/sprite.png', 'tw', );
+$tw: (116px, 156px, -116px, -156px, 28px, 22px, 302px, 278px, '../img/sprites/sprite.png', 'tw', );
 $vk-h-name: 'vk-h';
-$vk-h-x: 52px;
-$vk-h-y: 148px;
-$vk-h-offset-x: -52px;
-$vk-h-offset-y: -148px;
+$vk-h-x: 84px;
+$vk-h-y: 178px;
+$vk-h-offset-x: -84px;
+$vk-h-offset-y: -178px;
 $vk-h-width: 32px;
 $vk-h-height: 18px;
-$vk-h-total-width: 254px;
-$vk-h-total-height: 230px;
+$vk-h-total-width: 302px;
+$vk-h-total-height: 278px;
 $vk-h-image: '../img/sprites/sprite.png';
-$vk-h: (52px, 148px, -52px, -148px, 32px, 18px, 254px, 230px, '../img/sprites/sprite.png', 'vk-h', );
+$vk-h: (84px, 178px, -84px, -178px, 32px, 18px, 302px, 278px, '../img/sprites/sprite.png', 'vk-h', );
 $vk-name: 'vk';
-$vk-x: 84px;
-$vk-y: 130px;
-$vk-offset-x: -84px;
-$vk-offset-y: -130px;
+$vk-x: 52px;
+$vk-y: 196px;
+$vk-offset-x: -52px;
+$vk-offset-y: -196px;
 $vk-width: 32px;
 $vk-height: 18px;
-$vk-total-width: 254px;
-$vk-total-height: 230px;
+$vk-total-width: 302px;
+$vk-total-height: 278px;
 $vk-image: '../img/sprites/sprite.png';
-$vk: (84px, 130px, -84px, -130px, 32px, 18px, 254px, 230px, '../img/sprites/sprite.png', 'vk', );
-$spritesheet-width: 254px;
-$spritesheet-height: 230px;
+$vk: (52px, 196px, -52px, -196px, 32px, 18px, 302px, 278px, '../img/sprites/sprite.png', 'vk', );
+$spritesheet-width: 302px;
+$spritesheet-height: 278px;
 $spritesheet-image: '../img/sprites/sprite.png';
-$spritesheet-sprites: ($arrow-down-hover, $arrow-down, $arrow-up-hover, $arrow-up, $fb-h, $fb, $like-h, $like, $tw-h, $tw, $vk-h, $vk, );
-$spritesheet: (254px, 230px, '../img/sprites/sprite.png', $spritesheet-sprites, );
->>>>>>> sidebar_positioning
+$spritesheet-sprites: ($arrow-down-hover, $arrow-down, $arrow-up-hover, $arrow-up, $fb-h, $fb, $like-h, $like, $regul-h, $regul, $tw-h, $tw, $vk-h, $vk, );
+$spritesheet: (302px, 278px, '../img/sprites/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
