--- a/src/style/components/_slider.scss
+++ b/src/style/components/_slider.scss
@@ -58,12 +58,17 @@
 }
 
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
-    border: none; 
+    border: none;
+    background: url("images/ui-bg_glass_100_f6f6f6_1x400.png") 50% 50% repeat-x;
     @include sprite($regul);
 	&:hover {
 		@include sprite($regul-h);
 		border: none;
 		cursor: pointer;
 	}
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+
 }
 //============Стилизация плагина jQuery UI============
