--- a/src/jade/blocks/_sidebar_position.jade
+++ b/src/jade/blocks/_sidebar_position.jade
@@ -3,15 +3,24 @@
 	.sidebar__position_content
 		.sidebar__position_square
 			ul.sidebar__position_list
-				li(data-position="top-left").sidebar__position_item.top-left
-				li(data-position="top-center").sidebar__position_item.top-center
-				li(data-position="top-right").sidebar__position_item.top-right
-				li(data-position="middle-left").sidebar__position_item.middle-left
-				li(data-position="middle-center").sidebar__position_item.middle-center
-				li(data-position="middle-right").sidebar__position_item.middle-right
-				li(data-position="bottom-left").sidebar__position_item.bottom-left
-				li(data-position="bottom-center").sidebar__position_item.bottom-center
-				li(data-position="bottom-right").sidebar__position_item.bottom-right
+				li.sidebar__position_item
+					a(src="#" data-position="top-left").sidebar__position_link.top-left
+				li.sidebar__position_item
+					a(src="#" data-position="top-center").sidebar__position_link.top-center
+				li.sidebar__position_item
+					a(src="#" data-position="top-right").sidebar__position_link.top-right
+				li.sidebar__position_item
+					a(src="#" data-position="middle-left").sidebar__position_link.middle-left
+				li.sidebar__position_item
+					a(src="#" data-position="middle-center").sidebar__position_link.middle-center
+				li.sidebar__position_item
+					a(src="#" data-position="middle-right").sidebar__position_link.middle-right
+				li.sidebar__position_item
+					a(src="#" data-position="bottom-left").sidebar__position_link.bottom-left
+				li.sidebar__position_item
+					a(src="#" data-position="bottom-center").sidebar__position_link.bottom-center
+				li.sidebar__position_item
+					a(src="#" data-position="bottom-right").sidebar__position_link.bottom-right
 		.sidebar__position_coordinates
 			.wrapper__position
 				label.sidebar__position_coordinate-labelX
