--- a/src/jade/blocks/_sidebar_position.jade
+++ b/src/jade/blocks/_sidebar_position.jade
@@ -1,36 +1,36 @@
-.sidebar__position
-	.sidebar__position_title Положение
-	.sidebar__position_content
-		.sidebar__position_square
-			ul.sidebar__position_list
-				li.sidebar__position_item
-					a(src="#" data-position="top-left").sidebar__position_link.top-left
-				li.sidebar__position_item
-					a(src="#" data-position="top-center").sidebar__position_link.top-center
-				li.sidebar__position_item
-					a(src="#" data-position="top-right").sidebar__position_link.top-right
-				li.sidebar__position_item
-					a(src="#" data-position="middle-left").sidebar__position_link.middle-left
-				li.sidebar__position_item
-					a(src="#" data-position="middle-center").sidebar__position_link.middle-center
-				li.sidebar__position_item
-					a(src="#" data-position="middle-right").sidebar__position_link.middle-right
-				li.sidebar__position_item
-					a(src="#" data-position="bottom-left").sidebar__position_link.bottom-left
-				li.sidebar__position_item
-					a(src="#" data-position="bottom-center").sidebar__position_link.bottom-center
-				li.sidebar__position_item
-					a(src="#" data-position="bottom-right").sidebar__position_link.bottom-right
-		.sidebar__position_coordinates
-			.wrapper__position
-				label.sidebar__position_coordinate-labelX
-					input.position_input.coordinateX
-				.position__arrow
-					.position__arrow_up
-					.position__arrow_down
-			.wrapper__position
-				label.sidebar__position_coordinate-labelY
-					input.position_input.coordinateY
-				.position__arrow
-					.position__arrow_up
-					.position__arrow_down
+.sidebar-position
+	.sidebar-position-title Положение
+	.sidebar-position-content
+		.sidebar-position-square
+			ul.sidebar-position-list
+				li.sidebar-position__item
+					a(src="#" data-position="top-left").sidebar-position__link.top-left
+				li.sidebar-position__item
+					a(src="#" data-position="top-center").sidebar-position__link.top-center
+				li.sidebar-position__item
+					a(src="#" data-position="top-right").sidebar-position__link.top-right
+				li.sidebar-position__item
+					a(src="#" data-position="middle-left").sidebar-position__link.middle-left
+				li.sidebar-position__item
+					a(src="#" data-position="middle-center").sidebar-position__link.middle-center
+				li.sidebar-position__item
+					a(src="#" data-position="middle-right").sidebar-position__link.middle-right
+				li.sidebar-position__item
+					a(src="#" data-position="bottom-left").sidebar-position__link.bottom-left
+				li.sidebar-position__item
+					a(src="#" data-position="bottom-center").sidebar-position__link.bottom-center
+				li.sidebar-position__item
+					a(src="#" data-position="bottom-right").sidebar-position__link.bottom-right
+		.sidebar-position-coordinates
+			.wrapper-position
+				label.sidebar-position__coordinate-labelX
+					input.position-input.coordinateX
+				.position-arrow
+					.position-arrow__up
+					.position-arrow__down
+			.wrapper-position
+				label.sidebar-position__coordinate-labelX
+					input.position-input.coordinateX
+				.position-arrow
+					.position-arrow__up
+					.position-arrow__down
